responsive with single page stracture

--- a/drier/antiskiningbusa.html
+++ b/drier/antiskiningbusa.html
@@ -72,18 +72,18 @@
     <!-- end navigation -->
     </div> <!-- end container -->
     <!-- end navigation -->
-	<!--start page title -->
-	<section id="top-title" class="text-center text-light">
-	    <div class="row">
-	      <div class="col py-5 mt-5">
-	        <h2 class="text-light">ANTI SKINNING B</h2>
-	        <p class="lead">
-	        </p>
-	      </div>
-	    </div>
-	</section>
-	<!--end page title -->
-  <!--cobalt6 start -->
+  <!--start page title -->
+  <section id="top-title" class="text-center text-light">
+      <div class="row">
+        <div class="col py-5 mt-5">
+          <h2 class="text-light">ANTI SKINNING B</h2>
+          <p class="lead">
+          </p>
+        </div>
+      </div>
+  </section>
+  <!--end page title -->
+  <!--product start -->
   <div class="container">
   <section class="cobalt pro-img">
     <div class="row py-5">
@@ -98,8 +98,8 @@
       </div>
     </div>
     <div class="row">
-    	<div class="col">
-    	<table class="table table-striped table-dark">
+      <div class="col">
+      <table class="table table-striped table-dark">
   <tbody>
     <tr>
       <td>Product Name</td>
@@ -135,11 +135,11 @@
     </tr>
     <tr>
       <td>Payment</td>
-      <td>Bkash-8798798</td>
+      <td>Bkash-</td>
     </tr>
      <tr>
-      <td>Bank</td>
-      <td>IFIC 1005152379001 / 1005152379121 </td>
+      <td></td>
+      <td>Bank: IFIC 1005152379001 / 1005152379121 </td>
     </tr>
     <tr>
       <td>Office Time</td>
@@ -150,10 +150,9 @@
       <td>eastern_paint@yahoo.com</td>
     </tr>
     <tr>
-      <td class="text-warning">
-      	NB: No goods is delivered before payment is confirmed , if you pay on BKASH you must pay tk20 per thousand for BKASH costing charge. The authorities will not be laible for any mistakes. 
+      <td colspan="2" class="text-warning">
+        NB: No goods is delivered before payment is confirmed , if you pay on BKASH you must pay tk20 per thousand for BKASH costing charge. The authorities will not be laible for any mistakes. 
       </td>
-      <td></td>
     </tr>
   </tbody>
 </table>
@@ -161,7 +160,7 @@
     </div>
   </section>
   </div>
-  <!-- cobalt6 end -->
+  <!-- product end -->
     <!-- footer start -->
     <footer>
       <div class="footer-top">
@@ -175,37 +174,37 @@
                 <div class="row custom-color">
                   <div class="col-xs-6 col-sm-3 col-md-2  extra-small">
                     <ul class="">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Privacy</a></li>
-                      <li><a href="#">Blog</a></li>
+                      <li><a href="antiskiningbusa.html">Anti skinnig</a></li>
+                      <li><a href="bxpb.html">Bxpb-lead</a></li>
+                      <li><a href="calcium5usa.html">Calcium 5%</a></li>
+                      <li><a href="cobalt6usa.html">cobalt 6%</a></li>
+                      <li><a href="chemical/alkydresin.html">Alkyd resin</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Privacy</a></li>
-                      <li><a href="#">Blog</a></li>
+                      <li><a href="chemical/cotton12.html">Cotton 1/2%</a></li>
+                      <li><a href="chemical/cotton30.html">Cotton 30%</a></li>
+                      <li><a href="chemical/cotton40.html">Cotton 40%</a></li>
+                      <li><a href="chemical/lithu.html">Lithuphone</a></li>
+                      <li><a href="chemical/mitsup.html">Mitsu petrosin</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="#">Yutube</a></li>
-                      <li><a href="#">Googel</a></li>
-                      <li><a href="#">Wiki-pedia</a></li>
-                      <li><a href="#">Pipilika</a></li>
-                      <li><a href="#">Yahoo</a></li>
+                      <li><a href="chemical/texapor.html">Texapor</a></li>
+                      <li><a href="chemical/titinium202.html">Titinium 202</a></li>
+                      <li><a href="pigment/almuleafing.html">Alumunium leafing</a></li>
+                      <li><a href="pigment/kitonicindia.html">Kitonic</a></li>
+                      <li><a href="pigment/megablue909.html">Mega blue</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="#">Bteb</a></li>
-                      <li><a href="#">Health ministry</a></li>
-                      <li><a href="#">Bangladesh</a></li>
-                      <li><a href="#">Cricbuzz</a></li>
+                      <li><a href="pigment/ccblack683.html">CC black 683</a></li>
+                      <li><a href="pigment/ccorange535.html">CC orange 535</a></li>
+                      <li><a href="pigment/evmaroon.html">Maroon</a></li>
+                      <li><a href="pigment/evrubine.html">Rubine</a></li>
                     </ul>
                   </div>
                   <div class="col-md-4 col-sm-12 extra-small">
