--- a/ink.html
+++ b/ink.html
@@ -384,42 +384,42 @@
             <div class="card-header bg-transparent ">
               <marquee behavior="" direction="" scrollmount=''>Site development work is underway</marquee>
             </div>
-            <div class="hide576">
+               <div class="hide576">
               <div class="card-body text-success">
                 <div class="row custom-color">
                   <div class="col-xs-6 col-sm-3 col-md-2  extra-small">
                     <ul class="">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Privacy</a></li>
-                      <li><a href="#">Blog</a></li>
+                      <li><a href="drier/antiskiningbusa.html">Anti skinnig</a></li>
+                      <li><a href="drier/bxpb.html">Bxpb-lead</a></li>
+                      <li><a href="drier/calcium5usa.html">Calcium 5%</a></li>
+                      <li><a href="drier/cobalt6usa.html">cobalt 6%</a></li>
+                      <li><a href="chemical/alkydresin.html">Alkyd resin</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Privacy</a></li>
-                      <li><a href="#">Blog</a></li>
+                      <li><a href="chemical/cotton12.html">Cotton 1/2%</a></li>
+                      <li><a href="chemical/cotton30.html">Cotton 30%</a></li>
+                      <li><a href="chemical/cotton40.html">Cotton 40%</a></li>
+                      <li><a href="chemical/lithu.html">Lithuphone</a></li>
+                      <li><a href="chemical/mitsup.html">Mitsu petrosin</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="#">Yutube</a></li>
-                      <li><a href="#">Googel</a></li>
-                      <li><a href="#">Wiki-pedia</a></li>
-                      <li><a href="#">Pipilika</a></li>
-                      <li><a href="#">Yahoo</a></li>
+                      <li><a href="chemical/texapor.html">Texapor</a></li>
+                      <li><a href="chemical/titinium202.html">Titinium 202</a></li>
+                      <li><a href="pigment/almuleafing.html">Alumunium leafing</a></li>
+                      <li><a href="pigment/kitonicindia.html">Kitonic</a></li>
+                      <li><a href="pigment/megablue909.html">Mega blue</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="#">Bteb</a></li>
-                      <li><a href="#">Health ministry</a></li>
-                      <li><a href="#">Bangladesh</a></li>
-                      <li><a href="#">Cricbuzz</a></li>
+                      <li><a href="pigment/ccblack683.html">CC black 683</a></li>
+                      <li><a href="pigment/ccorange535.html">CC orange 535</a></li>
+                      <li><a href="pigment/evmaroon.html">Maroon</a></li>
+                      <li><a href="pigment/evrubine.html">Rubine</a></li>
                     </ul>
                   </div>
                   <div class="col-md-4 col-sm-12 extra-small">
