--- a/pigment/middlechromelmf.html
+++ b/pigment/middlechromelmf.html
@@ -1,1 +1,266 @@
-middlechromelmf.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>EPI-Comes and receive our service</title>
+    <!-- for shortcut icon -->
+    <link rel="shortcut icon" type="image/png" href="../img/epa.jpg">
+    <!-- for various language -->
+    <meta charset="utf-8">
+    <!-- for author -->
+    <meta name="author" content="Arman hossain">
+    <!-- for keyword -->
+    <meta name="keyword" content="html,css,php">
+    <!-- for description -->
+    <meta name="description" content="most popular tutorial">
+    <!-- for responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- particle js -->
+    <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
+    <meta name="author" content="Vincent Garreau" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- font awesome css -->
+    <link rel="stylesheet" type="text/css" href="../css/all.min.css">
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- animation css -->
+    <link rel="stylesheet" type="text/css" href="../css/animate.css">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <!-- owl-carousel css -->
+    <link rel="stylesheet" type="text/css" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/owl.theme.default.min.css">
+    <!-- main customize css -->
+    <link rel="stylesheet" media="screen" href="../css/particle.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+  </head>
+  <body class="main-container">
+    <!-- start navigation  -->
+    <div class="particle">
+      <div class="count-particles">
+        <span class="js-count-particles"></span>
+      </div>
+      <!-- particles.js container -->
+      <div id="particles-js"></div>
+    </div>
+    <div class="container"> <!-- start container -->
+    <!-- start navigation  -->
+    <nav class="navbar res-nav navbar-dark bg-transparent navbar-expand-md fixed-top">
+      <div class="container">
+        <a href="../index.html" class="navbar-brand"><img src="../img/epa.jpg" alt="logo"></a>
+        <button class="navbar-toggler navbr-toggler-right" data-toggle='collapse' data-target='#navbarNav'>
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbarNav" class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="../chemical.html">Resin / petrosin</a>
+                <a class="dropdown-item" href="../drier.html">Drier</a>
+                <a class="dropdown-item" href="../ink.html">Ink industries</a>
+              </div>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="../gallary.html">Gallery</a></li>
+            <li class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="../privacy.html">Privacy</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- end navigation -->
+    </div> <!-- end container -->
+    <!-- end navigation -->
+  <!--start page title -->
+  <section id="top-title" class="text-center text-light">
+      <div class="row">
+        <div class="col py-5 mt-5">
+          <h2 class="text-light">ANTI SKINNING B</h2>
+          <p class="lead">
+          </p>
+        </div>
+      </div>
+  </section>
+  <!--end page title -->
+  <!--product start -->
+  <div class="container">
+  <section class="cobalt pro-img">
+    <div class="row py-5">
+      <div class="col-4">
+        <img src="../img/cobalt2.jpg" alt="cobalt6">
+      </div>
+      <div class="col-4">
+        <img src="../img/cobalt2.jpg" alt="cobal6">
+      </div>
+      <div class="col-4">
+        <img src="../img/cobalt2.jpg" alt="cobalt6">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+      <table class="table table-striped table-dark">
+  <tbody>
+    <tr>
+      <td>Product Name</td>
+      <td>Anti skinning B</td>
+    </tr>
+    <tr>
+      <td>Net Weight</td>
+      <td>200kg</td>
+    </tr>
+    <tr>
+      <td>Packing</td>
+      <td>Tin Dram</td>
+    </tr>
+     <tr>
+      <td>Size</td>
+      <td>height-30` width-12`</td>
+    </tr>
+    <tr>
+      <td>Stock</td>
+      <td>Available</td>
+    </tr>
+    <tr>
+      <td>Import</td>
+      <td>USA</td>
+    </tr>
+     <tr>
+      <td>Use</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <td>Order</td>
+      <td>01798051540,8798798798</td>
+    </tr>
+    <tr>
+      <td>Payment</td>
+      <td>Bkash-</td>
+    </tr>
+     <tr>
+      <td></td>
+      <td>Bank: IFIC 1005152379001 / 1005152379121 </td>
+    </tr>
+    <tr>
+      <td>Office Time</td>
+      <td>10:00 to 7:00pm</td>
+    </tr>
+    <tr>
+      <td>E-mail</td>
+      <td>eastern_paint@yahoo.com</td>
+    </tr>
+    <tr>
+      <td colspan="2" class="text-warning">
+        NB: No goods is delivered before payment is confirmed , if you pay on BKASH you must pay tk20 per thousand for BKASH costing charge. The authorities will not be laible for any mistakes. 
+      </td>
+    </tr>
+  </tbody>
+</table>
+</div>
+    </div>
+  </section>
+  </div>
+  <!-- product end -->
+    <!-- footer start -->
+    <footer>
+      <div class="footer-top">
+        <div class="card bg-dark text-secondary mb-3">
+          <div class="container">
+            <div class="card-header bg-transparent ">
+              <marquee behavior="" direction="" scrollmount=''>Site development work is underway</marquee>
+            </div>
+            <div class="hide576">
+              <div class="card-body text-success">
+                <div class="row custom-color">
+                  <div class="col-xs-6 col-sm-3 col-md-2  extra-small">
+                    <ul class="">
+                      <li><a href="drier/antiskiningbusa.html">Anti skinnig</a></li>
+                      <li><a href="drier/bxpb.html">Bxpb-lead</a></li>
+                      <li><a href="drier/calcium5usa.html">Calcium 5%</a></li>
+                      <li><a href="drier/cobalt6usa.html">cobalt 6%</a></li>
+                      <li><a href="chemical/alkydresin.html">Alkyd resin</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
+                    <ul class="">
+                      <li><a href="chemical/cotton12.html">Cotton 1/2%</a></li>
+                      <li><a href="chemical/cotton30.html">Cotton 30%</a></li>
+                      <li><a href="chemical/cotton40.html">Cotton 40%</a></li>
+                      <li><a href="chemical/lithu.html">Lithuphone</a></li>
+                      <li><a href="chemical/mitsup.html">Mitsu petrosin</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
+                    <ul class="">
+                      <li><a href="chemical/texapor.html">Texapor</a></li>
+                      <li><a href="chemical/titinium202.html">Titinium 202</a></li>
+                      <li><a href="almuleafing.html">Alumunium leafing</a></li>
+                      <li><a href="kitonicindia.html">Kitonic</a></li>
+                      <li><a href="megablue909.html">Mega blue</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
+                    <ul class="">
+                      <li><a href="ccblack683.html">CC black 683</a></li>
+                      <li><a href="ccorange535.html">CC orange 535</a></li>
+                      <li><a href="evmaroon.html">Maroon</a></li>
+                      <li><a href="evrubine.html">Rubine</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-md-4 col-sm-12 extra-small">
+                    <div class="card text-white bg-primary">
+                      <div class="card-header">Contact  us</div>
+                      <div class="card-body">
+                        <p class="card-text">
+                          <li><i class="fas fa-phone"></i>   +8801798051540</li>
+                          <li><i class="fas fa-phone"></i>   +8801713222301</li>
+                          <li><i class="fas fa-envelope"></i>   eastern_paint@yahoo.com</li>
+                          <li><i class="fas fa-home"></i>    Old:49 Islampur road. <br> present: 15/1 , Jumrail lane <br> Babubazar , Dhaka</li>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-footer bg-dark">
+              <div class="footer-bottom-left self-align-center">
+                &copy;All wright reserved by Eastern Paint Agency&copy;2020
+              </div>
+              <div class="icon">
+                <ul>
+                  <li><a href="http://www.youtube.com" target="_blank"></a></li>
+                  <li><a href="http://www.facebook.com" target="_blank"></a></li>
+                  <li><a href="http://www.twitter.com" target="_blank"></a></li>
+                  <li><a href="http://www.instragram.com" target="_blank"></a></li>
+                </ul>
+              </div>
+              <div class="footer-bottom-right">
+                Designed & Developed by <a href="https://armanhosssain.github.io/portfolio-resposive" class="text-success" target="_blank">DarkIt</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <!-- jquery link -->
+    <script type="text/javascript" src="../js/jquery-3.4.0.js"></script>
+    <!-- main customize js link -->
+    <script type="text/javascript" src="../js/main.js"></script>
+    <!-- bootstrap js -->
+    <script src="../js/bootstrap.min.js"></script>
+    <!-- font awesome js link-->
+    <script type="text/javascript" src="../js/all.min.js"></script>
+    <!-- owl-carousel js link -->
+    <script type="text/javascript" src="../js/jquery.nicescroll.min.js"></script>
+    <script type="text/javascript" src="../js/owl.carousel.min.js"></script>
+    <!-- particle js -->
+    <!-- scripts -->
+    <script src="../js/particles.js"></script>
+    <script src="../js/app.js"></script>
+    <!-- stats.js -->
+    <script src="../js/stats.js"></script>
+  </body>
+</html>
