update footer & page

--- a/chemical/titinium404.html
+++ b/chemical/titinium404.html
@@ -76,7 +76,7 @@
   <section id="top-title" class="text-center text-light">
       <div class="row">
         <div class="col py-5 mt-5">
-          <h2 class="text-light">ANTI SKINNING B</h2>
+          <h2 class="text-light">TITINIUM DIOXIDE 404</h2>
           <p class="lead">
           </p>
         </div>
@@ -103,19 +103,19 @@
   <tbody>
     <tr>
       <td>Product Name</td>
-      <td>Anti skinning B</td>
+      <td>Titinium dioxide 404</td>
     </tr>
     <tr>
       <td>Net Weight</td>
-      <td>200kg</td>
+      <td>25kg</td>
     </tr>
     <tr>
       <td>Packing</td>
-      <td>Tin Dram</td>
+      <td>Paper bag</td>
     </tr>
      <tr>
       <td>Size</td>
-      <td>height-30` width-12`</td>
+      <td></td>
     </tr>
     <tr>
       <td>Stock</td>
@@ -123,23 +123,23 @@
     </tr>
     <tr>
       <td>Import</td>
-      <td>USA</td>
+      <td></td>
     </tr>
      <tr>
       <td>Use</td>
-      <td>@mdo</td>
+      <td></td>
     </tr>
     <tr>
       <td>Order</td>
-      <td>01798051540,8798798798</td>
+      <td>01798051540</td>
     </tr>
     <tr>
       <td>Payment</td>
-      <td>Bkash-</td>
+      <td>Bkash-01712151177</td>
     </tr>
      <tr>
       <td></td>
-      <td>Bank: IFIC 1005152379001 / 1005152379121 </td>
+      <td>Bank</td>
     </tr>
     <tr>
       <td>Office Time</td>
@@ -174,10 +174,10 @@
                 <div class="row custom-color">
                   <div class="col-xs-6 col-sm-3 col-md-2  extra-small">
                     <ul class="">
-                      <li><a href="drier/antiskiningbusa.html">Anti skinnig</a></li>
-                      <li><a href="drier/bxpb.html">Bxpb-lead</a></li>
-                      <li><a href="drier/calcium5usa.html">Calcium 5%</a></li>
-                      <li><a href="drier/cobalt6usa.html">cobalt 6%</a></li>
+                      <li><a href="../drier/antiskiningbusa.html">Anti skinnig</a></li>
+                      <li><a href="../drier/bxpb.html">Bxpb-lead</a></li>
+                      <li><a href="../drier/calcium5usa.html">Calcium 5%</a></li>
+                      <li><a href="../drier/cobalt6usa.html">cobalt 6%</a></li>
                       <li><a href="alkydresin.html">Alkyd resin</a></li>
                     </ul>
                   </div>
@@ -194,17 +194,17 @@
                     <ul class="">
                       <li><a href="texapor.html">Texapor</a></li>
                       <li><a href="titinium202.html">Titinium 202</a></li>
-                      <li><a href="pigment/almuleafing.html">Alumunium leafing</a></li>
-                      <li><a href="pigment/kitonicindia.html">Kitonic</a></li>
-                      <li><a href="pigment/megablue909.html">Mega blue</a></li>
+                      <li><a href="../pigment/almuleafing.html">Alumunium leafing</a></li>
+                      <li><a href="../pigment/kitonicindia.html">Kitonic</a></li>
+                      <li><a href="../pigment/megablue909.html">Mega blue</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="pigment/ccblack683.html">CC black 683</a></li>
-                      <li><a href="pigment/ccorange535.html">CC orange 535</a></li>
-                      <li><a href="pigment/evmaroon.html">Maroon</a></li>
-                      <li><a href="pigment/evrubine.html">Rubine</a></li>
+                      <li><a href="../pigment/ccblack683.html">CC black 683</a></li>
+                      <li><a href="../pigment/ccorange535.html">CC orange 535</a></li>
+                      <li><a href="../pigment/evmaroon.html">Maroon</a></li>
+                      <li><a href="../pigment/evrubine.html">Rubine</a></li>
                     </ul>
                   </div>
                   <div class="col-md-4 col-sm-12 extra-small">
