--- a/pigment/evhred.html
+++ b/pigment/evhred.html
@@ -76,7 +76,7 @@
   <section id="top-title" class="text-center text-light">
       <div class="row">
         <div class="col py-5 mt-5">
-          <h2 class="text-light">ANTI SKINNING B</h2>
+          <h2 class="text-light">EVERBRIGHT H RED</h2>
           <p class="lead">
           </p>
         </div>
@@ -103,11 +103,11 @@
   <tbody>
     <tr>
       <td>Product Name</td>
-      <td>Anti skinning B</td>
+      <td>Everbright h red</td>
     </tr>
     <tr>
       <td>Net Weight</td>
-      <td>200kg</td>
+      <td>25kg</td>
     </tr>
     <tr>
       <td>Packing</td>
@@ -115,7 +115,7 @@
     </tr>
      <tr>
       <td>Size</td>
-      <td>height-30` width-12`</td>
+      <td></td>
     </tr>
     <tr>
       <td>Stock</td>
@@ -123,23 +123,23 @@
     </tr>
     <tr>
       <td>Import</td>
-      <td>USA</td>
+      <td></td>
     </tr>
      <tr>
       <td>Use</td>
-      <td>@mdo</td>
+      <td></td>
     </tr>
     <tr>
       <td>Order</td>
-      <td>01798051540,8798798798</td>
+      <td>01798051540</td>
     </tr>
     <tr>
       <td>Payment</td>
-      <td>Bkash-</td>
+      <td>Bkash-01712151177</td>
     </tr>
      <tr>
       <td></td>
-      <td>Bank: IFIC 1005152379001 / 1005152379121 </td>
+      <td>Bank </td>
     </tr>
     <tr>
       <td>Office Time</td>
