--- a/drier/antiskiningbusa.html
+++ b/drier/antiskiningbusa.html
@@ -107,15 +107,15 @@
     </tr>
     <tr>
       <td>Net Weight</td>
-      <td>200kg</td>
+      <td>190.5kg</td>
     </tr>
     <tr>
       <td>Packing</td>
-      <td>Tin Dram</td>
+      <td>Steel Dram</td>
     </tr>
      <tr>
       <td>Size</td>
-      <td>height-30` width-12`</td>
+      <td></td>
     </tr>
     <tr>
       <td>Stock</td>
@@ -123,23 +123,23 @@
     </tr>
     <tr>
       <td>Import</td>
-      <td>USA</td>
+      <td></td>
     </tr>
      <tr>
       <td>Use</td>
-      <td>@mdo</td>
+      <td></td>
     </tr>
     <tr>
       <td>Order</td>
-      <td>01798051540,8798798798</td>
+      <td>01798051540</td>
     </tr>
     <tr>
       <td>Payment</td>
-      <td>Bkash-</td>
+      <td>Bkash-01712151177</td>
     </tr>
      <tr>
       <td></td>
-      <td>Bank: IFIC 1005152379001 / 1005152379121 </td>
+      <td>Bank </td>
     </tr>
     <tr>
       <td>Office Time</td>
@@ -167,7 +167,7 @@
         <div class="card bg-dark text-secondary mb-3">
           <div class="container">
             <div class="card-header bg-transparent ">
-              <marquee behavior="" direction="" scrollmount=''>Site development work is underway</marquee>
+              <marquee behavior="" direction="" scrollmount=''>Create a Web site for your organization Contact us. </marquee>
             </div>
             <div class="hide576">
               <div class="card-body text-success">
@@ -178,33 +178,33 @@
                       <li><a href="bxpb.html">Bxpb-lead</a></li>
                       <li><a href="calcium5usa.html">Calcium 5%</a></li>
                       <li><a href="cobalt6usa.html">cobalt 6%</a></li>
-                      <li><a href="chemical/alkydresin.html">Alkyd resin</a></li>
+                      <li><a href="../chemical/alkydresin.html">Alkyd resin</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="chemical/cotton12.html">Cotton 1/2%</a></li>
-                      <li><a href="chemical/cotton30.html">Cotton 30%</a></li>
-                      <li><a href="chemical/cotton40.html">Cotton 40%</a></li>
-                      <li><a href="chemical/lithu.html">Lithuphone</a></li>
-                      <li><a href="chemical/mitsup.html">Mitsu petrosin</a></li>
+                      <li><a href="../chemical/cotton12.html">Cotton 1/2%</a></li>
+                      <li><a href="../chemical/cotton30.html">Cotton 30%</a></li>
+                      <li><a href="../chemical/cotton40.html">Cotton 40%</a></li>
+                      <li><a href="../chemical/lithu.html">Lithuphone</a></li>
+                      <li><a href="../chemical/mitsup.html">Mitsu petrosin</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="chemical/texapor.html">Texapor</a></li>
-                      <li><a href="chemical/titinium202.html">Titinium 202</a></li>
-                      <li><a href="pigment/almuleafing.html">Alumunium leafing</a></li>
-                      <li><a href="pigment/kitonicindia.html">Kitonic</a></li>
-                      <li><a href="pigment/megablue909.html">Mega blue</a></li>
+                      <li><a href="../chemical/texapor.html">Texapor</a></li>
+                      <li><a href="../chemical/titinium202.html">Titinium 202</a></li>
+                      <li><a href="../pigment/almuleafing.html">Alumunium leafing</a></li>
+                      <li><a href="../pigment/kitonicindia.html">Kitonic</a></li>
+                      <li><a href="../pigment/megablue909.html">Mega blue</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="pigment/ccblack683.html">CC black 683</a></li>
-                      <li><a href="pigment/ccorange535.html">CC orange 535</a></li>
-                      <li><a href="pigment/evmaroon.html">Maroon</a></li>
-                      <li><a href="pigment/evrubine.html">Rubine</a></li>
+                      <li><a href="../pigment/ccblack683.html">CC black 683</a></li>
+                      <li><a href="../pigment/ccorange535.html">CC orange 535</a></li>
+                      <li><a href="../pigment/evmaroon.html">Maroon</a></li>
+                      <li><a href="../pigment/evrubine.html">Rubine</a></li>
                     </ul>
                   </div>
                   <div class="col-md-4 col-sm-12 extra-small">
