--- a/drier/cobalt6usa.html
+++ b/drier/cobalt6usa.html
@@ -72,17 +72,17 @@
     <!-- end navigation -->
     </div> <!-- end container -->
     <!-- end navigation -->
-	<!--start page title -->
-	<section id="top-title" class="text-center text-light">
-	    <div class="row">
-	      <div class="col py-5 mt-5">
-	        <h2 class="text-light">COBALT 6%</h2>
-	        <p class="lead">
-	        </p>
-	      </div>
-	    </div>
-	</section>
-	<!--end page title -->
+  <!--start page title -->
+  <section id="top-title" class="text-center text-light">
+      <div class="row">
+        <div class="col py-5 mt-5">
+          <h2 class="text-light">COBALT 6% USA</h2>
+          <p class="lead">
+          </p>
+        </div>
+      </div>
+  </section>
+  <!--end page title -->
   <!--product start -->
   <div class="container">
   <section class="cobalt pro-img">
@@ -98,24 +98,24 @@
       </div>
     </div>
     <div class="row">
-    	<div class="col">
-    	<table class="table table-striped table-dark">
+      <div class="col">
+      <table class="table table-striped table-dark">
   <tbody>
     <tr>
       <td>Product Name</td>
-      <td>Cobalt 6%</td>
+      <td>Cobalt 6% usa</td>
     </tr>
     <tr>
       <td>Net Weight</td>
-      <td>200kg</td>
+      <td>185kg</td>
     </tr>
     <tr>
       <td>Packing</td>
-      <td>Tin Dram</td>
+      <td>Steel Dram</td>
     </tr>
      <tr>
       <td>Size</td>
-      <td>height-30` width-12`</td>
+      <td></td>
     </tr>
     <tr>
       <td>Stock</td>
@@ -127,19 +127,19 @@
     </tr>
      <tr>
       <td>Use</td>
-      <td>@mdo</td>
+      <td></td>
     </tr>
     <tr>
       <td>Order</td>
-      <td>01798051540,8798798798</td>
+      <td>01798051540</td>
     </tr>
     <tr>
       <td>Payment</td>
-      <td>Bkash-8798798</td>
+      <td>Bkash-01712151177</td>
     </tr>
      <tr>
-      <td>Bank</td>
-      <td>IFIC 1005152379001 / 1005152379121 </td>
+      <td></td>
+      <td>Bank </td>
     </tr>
     <tr>
       <td>Office Time</td>
@@ -151,7 +151,7 @@
     </tr>
     <tr>
       <td colspan="2" class="text-warning">
-      	NB: No goods is delivered before payment is confirmed , if you pay on BKASH you must pay tk20 per thousand for BKASH costing charge. The authorities will not be laible for any mistakes. 
+        NB: No goods is delivered before payment is confirmed , if you pay on BKASH you must pay tk20 per thousand for BKASH costing charge. The authorities will not be laible for any mistakes. 
       </td>
     </tr>
   </tbody>
@@ -178,33 +178,33 @@
                       <li><a href="bxpb.html">Bxpb-lead</a></li>
                       <li><a href="calcium5usa.html">Calcium 5%</a></li>
                       <li><a href="cobalt6usa.html">cobalt 6%</a></li>
-                      <li><a href="chemical/alkydresin.html">Alkyd resin</a></li>
+                      <li><a href="../chemical/alkydresin.html">Alkyd resin</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="chemical/cotton12.html">Cotton 1/2%</a></li>
-                      <li><a href="chemical/cotton30.html">Cotton 30%</a></li>
-                      <li><a href="chemical/cotton40.html">Cotton 40%</a></li>
-                      <li><a href="chemical/lithu.html">Lithuphone</a></li>
-                      <li><a href="chemical/mitsup.html">Mitsu petrosin</a></li>
+                      <li><a href="../chemical/cotton12.html">Cotton 1/2%</a></li>
+                      <li><a href="../chemical/cotton30.html">Cotton 30%</a></li>
+                      <li><a href="../chemical/cotton40.html">Cotton 40%</a></li>
+                      <li><a href="../chemical/lithu.html">Lithuphone</a></li>
+                      <li><a href="../chemical/mitsup.html">Mitsu petrosin</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="chemical/texapor.html">Texapor</a></li>
-                      <li><a href="chemical/titinium202.html">Titinium 202</a></li>
-                      <li><a href="pigment/almuleafing.html">Alumunium leafing</a></li>
-                      <li><a href="pigment/kitonicindia.html">Kitonic</a></li>
-                      <li><a href="pigment/megablue909.html">Mega blue</a></li>
+                      <li><a href="../chemical/texapor.html">Texapor</a></li>
+                      <li><a href="../chemical/titinium202.html">Titinium 202</a></li>
+                      <li><a href="../pigment/almuleafing.html">Alumunium leafing</a></li>
+                      <li><a href="../pigment/kitonicindia.html">Kitonic</a></li>
+                      <li><a href="../pigment/megablue909.html">Mega blue</a></li>
                     </ul>
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-2 extra-small">
                     <ul class="">
-                      <li><a href="pigment/ccblack683.html">CC black 683</a></li>
-                      <li><a href="pigment/ccorange535.html">CC orange 535</a></li>
-                      <li><a href="pigment/evmaroon.html">Maroon</a></li>
-                      <li><a href="pigment/evrubine.html">Rubine</a></li>
+                      <li><a href="../pigment/ccblack683.html">CC black 683</a></li>
+                      <li><a href="../pigment/ccorange535.html">CC orange 535</a></li>
+                      <li><a href="../pigment/evmaroon.html">Maroon</a></li>
+                      <li><a href="../pigment/evrubine.html">Rubine</a></li>
                     </ul>
                   </div>
                   <div class="col-md-4 col-sm-12 extra-small">
