--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								<h5 class="card-title">TAIWAN PETROSIN</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 								<p class="lead">Packing-25kg</p>
-								<a href="tai-petro.html" class="btn btn-outline-info mt-3">View more</a>
+								<a href="chemical/taiwanp.html" class="btn btn-outline-info mt-3">View more</a>
 							</div>
 						</div>
 					</div>
@@ -126,7 +126,7 @@
 								<h5 class="card-title">CHINA PETROSIN</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 								<p class="lead">Packing-25kg</p>
-								<a href="china-petro.html" class="btn btn-outline-info mt-3">View more</a>
+								<a href="chemical/ningbop.html" class="btn btn-outline-info mt-3">View more</a>
 							</div>
 						</div>
 					</div>
@@ -137,7 +137,7 @@
 								<h5 class="card-title">COBALT DRIER</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 								<p class="lead">Packing-227kg</p>
-								<a href="cobalt.html" class="btn btn-outline-info mt-3">View more</a>
+								<a href="drier/cobalt6usa.html" class="btn btn-outline-info mt-3">View more</a>
 							</div>
 						</div>
 					</div>
@@ -147,8 +147,8 @@
 							<div class="card-body">
 								<h5 class="card-title">LEAD DRIER</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-								<p class="lead">Packing-200kg</p>
-								<a href="lead.html" class="btn btn-outline-info mt-3">View more</a>
+								<p class="lead">Packing-181kg</p>
+								<a href="drier/bxpb.html" class="btn btn-outline-info mt-3">View more</a>
 							</div>
 						</div>
 					</div>
@@ -158,8 +158,8 @@
 							<div class="card-body">
 								<h5 class="card-title">PETROLEUM JELLY</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-								<p class="lead">Packing-200kg</p>
-								<a href="petroleum.html" class="btn btn-outline-info mt-3">View more</a>
+								<p class="lead">Packing-175kg</p>
+								<a href="chemical/petroleumj.html" class="btn btn-outline-info mt-3">View more</a>
 							</div>
 						</div>
 					</div>
@@ -167,10 +167,131 @@
 						<div class="card">
 							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
 							<div class="card-body">
-								<h5 class="card-title">CALCIUM DRIER</h5>
+								<h5 class="card-title">ALUMINIUM PASTE NON LEAFING</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-25kg</p>
+								<a href="pigment/almunonleafl.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">EVERBRIGHT MAROON</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-25kg</p>
+								<a href="pigment/evmaroon.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">ALUMINIUM PASTE LEAFING</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-25kg</p>
+								<a href="pigment/almuleafing.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">ALKYD RESIN</h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 								<p class="lead">Packing-200kg</p>
-								<a href="calcium.html" class="btn btn-outline-info mt-3">View more</a>
+								<a href="chemical/alkydresin.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">NITROCELLULOSE</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-120kg</p>
+								<a href="chemical/cotton12.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">GAMDAMAR</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-25kg</p>
+								<a href="chemical/gdamara.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">LITHOPHONE GLORY</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-25kg</p>
+								<a href="chemical/lithu.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">MTT</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-200kg</p>
+								<a href="chemical/mtt.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">SHORT OIL ALKYD RESIN</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-190kg</p>
+								<a href="chemical/shortoil.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">TITINIUM 202</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-25kg</p>
+								<a href="chemical/titinium202.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">VINYL RESIN</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-25kg</p>
+								<a href="chemical/vinylresin.html" class="btn btn-outline-info mt-3">View more</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+						<div class="card">
+							<img src="img/calcium.jpg" class="card-img-top" alt="picture">
+							<div class="card-body">
+								<h5 class="card-title">ANTISKINNING</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="lead">Packing-190.5kg</p>
+								<a href="drier/antiskiningbusa.html" class="btn btn-outline-info mt-3">View more</a>
 							</div>
 						</div>
 					</div>
